Print result of shell escape to .log with LuaTeX

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -556,7 +556,7 @@
     \cs_new_protected:Npn \sys_shell_now:n #1
       {
         \lua_now:e
-          { os.execute(" \lua_escape:e { \tl_to_str:n {#1} } ") }
+          { l3kernel.shellescape(" \lua_escape:e { \tl_to_str:n {#1} } ") }
       }
   }
   {
@@ -575,7 +575,7 @@
     \cs_new_protected:Npn \sys_shell_shipout:n #1
       {
         \lua_shipout_e:n
-          { os.execute(" \lua_escape:e { \tl_to_str:n {#1} } ") }
+          { l3kernel.shellescape(" \lua_escape:e { \tl_to_str:n {#1} } ") }
       }
   }
   {
