--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -508,11 +508,11 @@ l3kernel.strcmp = strcmp
 local function shellescape(cmd)
   local status,msg = os_exec(cmd)
   if status == nil then
-    write_nl("log","runsystem(" .. cmd .. ")...(" .. msg .. ")\n" )
-  elseif status = 0 then
-    write_nl("log","runsystem(" .. cmd .. ")...executed\n" )
+    write_nl("log","runsystem(" .. cmd .. ")...(" .. msg .. ")\n")
+  elseif status == 0 then
+    write_nl("log","runsystem(" .. cmd .. ")...executed\n")
   else
-    write_nl("log","runsystem(" .. cmd .. ")...failed .. " (msg or "") .. "\n" )
+    write_nl("log","runsystem(" .. cmd .. ")...failed " .. (msg or "") .. "\n")
   end
 end
 l3kernel.shellescape = shellescape
