Flesh out pTeX primitive list

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1117,12 +1117,15 @@
 %    \begin{macrocode}
   \@@_primitive:NN \autospacing           \tex_autospacing:D
   \@@_primitive:NN \autoxspacing          \tex_autoxspacing:D
+  \@@_primitive:NN \disinhibitglue        \tex_disinhibitglue:D
   \@@_primitive:NN \dtou                  \tex_dtou:D
   \@@_primitive:NN \epTeXinputencoding    \tex_epTeXinputencoding:D
   \@@_primitive:NN \epTeXversion          \tex_epTeXversion:D
   \@@_primitive:NN \euc                   \tex_euc:D
+  \@@_primitive:NN \hfi                   \tex_fhi:D
   \@@_primitive:NN \ifdbox                \tex_ifdbox:D
   \@@_primitive:NN \ifddir                \tex_ifddir:D
+  \@@_primitive:NN \ifmbox                \tex_ifmbox:D
   \@@_primitive:NN \ifmdir                \tex_ifmdir:D
   \@@_primitive:NN \iftbox                \tex_iftbox:D
   \@@_primitive:NN \iftdir                \tex_iftdir:D
@@ -1139,17 +1142,27 @@
   \@@_primitive:NN \kansujichar           \tex_kansujichar:D
   \@@_primitive:NN \kcatcode              \tex_kcatcode:D
   \@@_primitive:NN \kuten                 \tex_kuten:D
+  \@@_primitive:NN \lastnodechar          \tex_lastnodechar:D
+  \@@_primitive:NN \lastnodesubtype       \tex_lastnodesubtype:D
   \@@_primitive:NN \noautospacing         \tex_noautospacing:D
   \@@_primitive:NN \noautoxspacing        \tex_noautoxspacing:D
+  \@@_primitive:NN \pagefistretch         \tex_pagefistretch:D
   \@@_primitive:NN \postbreakpenalty      \tex_postbreakpenalty:D
   \@@_primitive:NN \prebreakpenalty       \tex_prebreakpenalty:D
   \@@_primitive:NN \ptexminorversion      \tex_ptexminorversion:D
   \@@_primitive:NN \ptexrevision          \tex_ptexrevision:D
   \@@_primitive:NN \ptexversion           \tex_ptexversion:D
+  \@@_primitive:NN \readpapersizespecial  \tex_readpapersizespecial:D
+  \@@_primitive:NN \scriptbaselineshiftfactor
+    \tex_scriptbaselineshiftfactor:D
+  \@@_primitive:NN \scriptscriptbaselineshiftfactor
+    \tex_scriptscriptbaselineshiftfactor:D
   \@@_primitive:NN \showmode              \tex_showmode:D
   \@@_primitive:NN \sjis                  \tex_sjis:D
   \@@_primitive:NN \tate                  \tex_tate:D
   \@@_primitive:NN \tbaselineshift        \tex_tbaselineshift:D
+  \@@_primitive:NN \textbaselineshiftfactor
+    \tex_textbaselineshiftfactor:D
   \@@_primitive:NN \tfont                 \tex_tfont:D
   \@@_primitive:NN \xkanjiskip            \tex_xkanjiskip:D
   \@@_primitive:NN \xspcode               \tex_xspcode:D
