\tex_fhi:D → \tex_hfi:D

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1117,7 +1117,7 @@
   \@@_primitive:NN \epTeXinputencoding    \tex_epTeXinputencoding:D
   \@@_primitive:NN \epTeXversion          \tex_epTeXversion:D
   \@@_primitive:NN \euc                   \tex_euc:D
-  \@@_primitive:NN \hfi                   \tex_fhi:D
+  \@@_primitive:NN \hfi                   \tex_hfi:D
   \@@_primitive:NN \ifdbox                \tex_ifdbox:D
   \@@_primitive:NN \ifddir                \tex_ifddir:D
   \@@_primitive:NN \ifmbox                \tex_ifmbox:D
