Access full register range in (u)pTeX

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1508,11 +1508,17 @@
 % \begin{variable}{\c_max_register_int}
 %   This is here as this particular integer is needed both in package
 %   mode and to bootstrap \pkg{l3alloc}, and is documented in \pkg{l3int}.
+%   \LuaTeX{} and those which contain parts of the Omega extensions have
+%   more registers available than \eTeX{}. 
 %    \begin{macrocode}
 \tex_ifdefined:D \tex_luatexversion:D
   \tex_chardef:D \c_max_register_int = 65 535 ~
 \tex_else:D
-  \tex_mathchardef:D \c_max_register_int = 32 767 ~
+  \tex_ifdefined:D \tex_omathchardef:D
+    \tex_omathchardef:D \c_max_register_int = 65535 ~
+  \tex_else:D
+    \tex_mathchardef:D \c_max_register_int = 32767 ~
+  \tex_fi:D
 \tex_fi:D
 %    \end{macrocode}
 % \end{variable}
