--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1285,12 +1285,11 @@
   }
 \cs_generate_variant:Nn \int_const:Nn { c }
 \if_int_odd:w 0
-  \cs_if_exist:NT \tex_luatexversion:D  { 1 }
-  \cs_if_exist:NT \tex_disablecjktoken:D
-    { \if_int_compare:w \tex_jis:D "2121 = "3000 ~ 1 \fi: }
-  \cs_if_exist:NT \tex_XeTeXversion:D    { 1 } ~
-    \cs_if_exist:NTF \tex_disablecjktoken:D
-      { \cs_new_eq:NN \@@_constdef:Nw \tex_kchardef:D }
+  \cs_if_exist:NT \tex_luatexversion:D { 1 }
+  \cs_if_exist:NT \tex_omathchardef:D  { 1 }
+  \cs_if_exist:NT \tex_XeTeXversion:D  { 1 } ~
+    \cs_if_exist:NTF \tex_omathchardef:D
+      { \cs_new_eq:NN \@@_constdef:Nw \tex_omathchardef:D }
       { \cs_new_eq:NN \@@_constdef:Nw \tex_chardef:D }
     \@@_constdef:Nw \c_@@_max_constdef_int 1114111 ~
 \else:
