Trim spaces surrounding file names
Windows ignores spaces at the end of an extension,
and does not allow creation of files starting with a space
from the GUI. As such, this change gives us the
best chance to have consistent cross-platform
behaviour.

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -69,6 +69,11 @@
 % using |"| tokens if they contain spaces: as a result, |"| tokens are
 % \emph{not} permitted in file names.
 %
+% Spaces are trimmed at the beginning and end of the filename \emph{as given}:
+% this reflects the fact that some file systems do not allow or interact
+% unpredictably with spaces in these positions. When no extension is given,
+% this will trim spaces from the \enquote{stem} of the file name.
+%
 % \section{Input--output stream management}
 %
 % As \TeX{} engines have a limited number of input and output streams, direct
@@ -2369,8 +2374,11 @@
 %    \begin{macrocode}
 \cs_new:Npn \__kernel_file_name_sanitize:n #1
   {
-    \__kernel_file_name_expand_loop:w #1
-      \q_recursion_tail \q_recursion_stop
+    \exp_args:Ne \tl_trim_spaces:n
+      {
+        \__kernel_file_name_expand_loop:w #1
+          \q_recursion_tail \q_recursion_stop
+      }
   }
 \cs_new:Npn \__kernel_file_name_expand_loop:w #1 \q_recursion_stop
   {
