Simplify some names

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2561,7 +2561,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\@@_file_size:n}
+% \begin{macro}{\@@_size:n}
 %   A copy of the primitive where it's available, or the \LuaTeX{}
 %   equivalent if relevant. \XeTeX{} treats any quote chars as part of
 %   the name, so they must be removed. \LuaTeX{} also requires no quote chars
@@ -2569,25 +2569,25 @@
 %    \begin{macrocode}
 \sys_if_engine_xetex:TF
   {
-    \cs_new:Npn \@@_file_size:n #1
+    \cs_new:Npn \@@_size:n #1
       {
         \exp_args:Ne \tex_filesize:D
-          { \@@_file_size:w #1 " #1 " \q_stop }
+          { \@@_size:w #1 " #1 " \q_stop }
       }
-    \cs_new:Npn \@@_file_size:w #1 " #2 " #3 \q_stop {#2}
+    \cs_new:Npn \@@_size:w #1 " #2 " #3 \q_stop {#2}
   }
-  { \cs_new_eq:NN \@@_file_size:n \tex_filesize:D }
+  { \cs_new_eq:NN \@@_size:n \tex_filesize:D }
 \sys_if_engine_luatex:T
   {
-    \cs_gset:Npn \@@_file_size:n #1
+    \cs_gset:Npn \@@_size:n #1
       {
         \lua_now:e
           {
             l3kernel.filesize
-              ( " \lua_escape:e { \@@_file_size:w #1 " #1 " \q_stop } " )
+              ( " \lua_escape:e { \@@_size:w #1 " #1 " \q_stop } " )
           }
       }
-    \cs_new:Npn \@@_file_size:w #1 " #2 " #3 \q_stop {#2}
+    \cs_new:Npn \@@_size:w #1 " #2 " #3 \q_stop {#2}
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2596,14 +2596,14 @@
 % \begin{macro}[rEXP]{\@@_full_name:nn}
 % \begin{macro}[rEXP]{\@@_full_name_aux:nn}
 % \begin{macro}[rEXP]{\@@_full_name_aux:n}
-% \begin{macro}[rEXP]{\@@_file_name_cleanup:w}
-% \begin{macro}[rEXP]{\@@_file_name_end:}
-% \begin{macro}[rEXP]{\@@_file_name_ext_check:n}
+% \begin{macro}[rEXP]{\@@_name_cleanup:w}
+% \begin{macro}[rEXP]{\@@_name_end:}
+% \begin{macro}[rEXP]{\@@_name_ext_check:n}
 % \begin{macro}[rEXP]
 %   {
-%     \@@_file_name_ext_check_auxi:nw  ,
-%     \@@_file_name_ext_check_auxii:nw ,
-%     \@@_file_name_ext_check_auxiii:nw
+%     \@@_name_ext_check_auxi:nw  ,
+%     \@@_name_ext_check_auxii:nw ,
+%     \@@_name_ext_check_auxiii:nw
 %   }
 %   File searching can be carried out if the \tn{pdffilesize} primitive
 %   or an equivalent is available. That of course means we need to
@@ -2631,7 +2631,7 @@
   {
     \tl_if_blank:nF {#1}
       {
-        \tl_if_blank:eTF { \@@_file_size:n {#1} }
+        \tl_if_blank:eTF { \@@_size:n {#1} }
           {
             \seq_map_tokens:Nn \l_file_search_path_seq
               { \@@_full_name_aux:nn {#2} }
@@ -2642,9 +2642,9 @@
                   { \@@_full_name_aux:nn {#2} }
               }
 %</package>
-            \@@_file_name_end:
+            \@@_name_end:
           }
-          { \@@_file_ext_check:n {#1} }
+          { \@@_ext_check:n {#1} }
       }
   }
 %    \end{macrocode}
@@ -2658,17 +2658,17 @@
   }
 \cs_new:Npn \@@_full_name_aux:n #1
   {
-    \tl_if_blank:eF { \@@_file_size:n {#1} }
+    \tl_if_blank:eF { \@@_size:n {#1} }
       {
         \seq_map_break:n
           {
-            \@@_file_ext_check:n {#1}
-            \@@_file_name_cleanup:w
+            \@@_ext_check:n {#1}
+            \@@_name_cleanup:w
           }
       }
   }
-\cs_new:Npn \@@_file_name_cleanup:w #1 \@@_file_name_end: { }
-\cs_new:Npn \@@_file_name_end: { }
+\cs_new:Npn \@@_name_cleanup:w #1 \@@_name_end: { }
+\cs_new:Npn \@@_name_end: { }
 %    \end{macrocode}
 %   As \TeX{} automatically adds |.tex| if there is no extension,
 %   there is a little clean up to do here. First, find the file
@@ -2676,21 +2676,21 @@
 %   the path.(The quoted name is retained for the common case that
 %   there is no additional work to do.)
 %    \begin{macrocode}
-\cs_new:Npn \@@_file_ext_check:n #1
-  { \@@_file_ext_check_auxi:nw {#1} #1 " #1 " \q_stop }
-\cs_new:Npn \@@_file_ext_check_auxi:nw #1#2 " #3 " #4 \q_stop
-  { \@@_file_ext_check_auxii:nw {#1} #3 / \q_nil / \q_stop }
-\cs_new:Npn \@@_file_ext_check_auxii:nw #1#2 / #3 / #4 \q_stop
+\cs_new:Npn \@@_ext_check:n #1
+  { \@@_ext_check_auxi:nw {#1} #1 " #1 " \q_stop }
+\cs_new:Npn \@@_ext_check_auxi:nw #1#2 " #3 " #4 \q_stop
+  { \@@_ext_check_auxii:nw {#1} #3 / \q_nil / \q_stop }
+\cs_new:Npn \@@_ext_check_auxii:nw #1#2 / #3 / #4 \q_stop
   {
     \quark_if_nil:nTF {#3}
-      { \@@_file_ext_check_auxiii:nw {#1} #2 . \q_nil . \q_stop }
-      { \@@_file_ext_check_auxii:nw {#1} #3 / #4 \q_stop }
+      { \@@_ext_check_auxiii:nw {#1} #2 . \q_nil . \q_stop }
+      { \@@_ext_check_auxii:nw {#1} #3 / #4 \q_stop }
   }
-\cs_new:Npx \@@_file_ext_check_auxiii:nw #1#2 . #3 . #4 \q_stop
+\cs_new:Npx \@@_ext_check_auxiii:nw #1#2 . #3 . #4 \q_stop
   {
     \exp_not:N \quark_if_nil:nTF {#3}
       {
-        \exp_not:N \exp_args:Nee \exp_not:N \@@_file_ext_check_auxiv:nn
+        \exp_not:N \exp_args:Nee \exp_not:N \@@_ext_check_auxiv:nn
           { \exp_not:N \__kernel_file_name_quote:n {#1} }
           {
             \exp_not:N \__kernel_file_name_quote:n
@@ -2699,13 +2699,13 @@
       }
       {#1}
   }
-\cs_new:Npn \@@_file_ext_check_auxiv:nn #1#2
+\cs_new:Npn \@@_ext_check_auxiv:nn #1#2
   {
-    \tl_if_blank:eTF { \@@_file_size:n {#2} }
+    \tl_if_blank:eTF { \@@_size:n {#2} }
       {#1}
       {
         \int_compare:nNnTF
-          { \@@_file_size:n {#1} } = { \@@_file_size:n {#2} }
+          { \@@_size:n {#1} } = { \@@_size:n {#2} }
           {#2}
           {#1}
       }
