Correct EXP status of some internal functions

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2601,15 +2601,15 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[rEXP]{\file_full_name:n, \@@_full_name:n}
-% \begin{macro}[rEXP]{\@@_full_name_aux:nn}
-% \begin{macro}[rEXP]{\@@_full_name_aux:n}
-% \begin{macro}[rEXP]{\@@_name_cleanup:w}
-% \begin{macro}[rEXP]{\@@_name_end:}
-% \begin{macro}[rEXP]{\@@_name_ext_check:n}
-% \begin{macro}[rEXP]{\@@_name_ext_check:nw}
-% \begin{macro}[rEXP]{\@@_name_ext_check:nnw}
-% \begin{macro}[rEXP]{\@@_name_ext_check:nn}
+% \begin{macro}[EXP]{\file_full_name:n, \@@_full_name:n}
+% \begin{macro}[EXP]{\@@_full_name_aux:nn}
+% \begin{macro}[EXP]{\@@_full_name_aux:n}
+% \begin{macro}[EXP]{\@@_name_cleanup:w}
+% \begin{macro}[EXP]{\@@_name_end:}
+% \begin{macro}[EXP]{\@@_name_ext_check:n}
+% \begin{macro}[EXP]{\@@_name_ext_check:nw}
+% \begin{macro}[EXP]{\@@_name_ext_check:nnw}
+% \begin{macro}[EXP]{\@@_name_ext_check:nn}
 %   File searching can be carried out if the \tn{pdffilesize} primitive
 %   or an equivalent is available. That of course means we need to
 %   arrange for everything else to here to be done by expansion too.
