Update upTeX test
This aligns with 'new' iftex package and also
guidance from pTeX devs.

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -337,10 +337,7 @@
 %   }
 % \begin{variable}{\c_sys_engine_str}
 %   Set up the engine tests on the basis exactly one test should be true.
-%   Mainly a case of looking for the appropriate marker primitive. For
-%   \upTeX{}, there is a complexity in that setting |-kanji-internal=sjis|
-%   or |-kanji-internal=euc| effective makes it more like \pTeX{}. In those
-%   cases we therefore report \pTeX{} rather than \upTeX{}.
+%   Mainly a case of looking for the appropriate marker primitive.
 %    \begin{macrocode}
 \str_const:Nx \c_sys_engine_str
   {
@@ -348,9 +345,7 @@
     \cs_if_exist:NT \tex_pdftexversion:D { pdftex }
     \cs_if_exist:NT \tex_kanjiskip:D
       {
-        \bool_lazy_and:nnTF
-          { \cs_if_exist_p:N \tex_disablecjktoken:D }
-          { \int_compare_p:nNn { \tex_jis:D "2121 } = { "3000 } }
+        \cs_if_exist:NTF \tex_enablecjktoken:D
           { uptex }
           { ptex }
       }
