Mark some expandable functions

--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -191,7 +191,7 @@
 %   easily.
 % \end{variable}
 %
-% \begin{function}{\quark_if_recursion_tail_stop:N}
+% \begin{function}[EXP]{\quark_if_recursion_tail_stop:N}
 %   \begin{syntax}
 %     \cs{quark_if_recursion_tail_stop:N} \meta{token}
 %   \end{syntax}
@@ -203,7 +203,7 @@
 %   and \cs{q_recursion_stop} as the last two items.
 % \end{function}
 %
-% \begin{function}[updated = 2011-09-06]
+% \begin{function}[EXP,updated = 2011-09-06]
 %   {\quark_if_recursion_tail_stop:n, \quark_if_recursion_tail_stop:o}
 %   \begin{syntax}
 %     \cs{quark_if_recursion_tail_stop:n} \Arg{token list}
@@ -216,7 +216,7 @@
 %   and \cs{q_recursion_stop} as the last two items.
 % \end{function}
 %
-% \begin{function}{\quark_if_recursion_tail_stop_do:Nn}
+% \begin{function}[EXP]{\quark_if_recursion_tail_stop_do:Nn}
 %   \begin{syntax}
 %     \cs{quark_if_recursion_tail_stop_do:Nn} \meta{token} \Arg{insertion}
 %   \end{syntax}
@@ -230,7 +230,7 @@
 %   ended.
 % \end{function}
 %
-% \begin{function}[updated = 2011-09-06]
+% \begin{function}[EXP,updated = 2011-09-06]
 %   {\quark_if_recursion_tail_stop_do:nn, \quark_if_recursion_tail_stop_do:on}
 %   \begin{syntax}
 %     \cs{quark_if_recursion_tail_stop_do:nn} \Arg{token list} \Arg{insertion}
@@ -246,7 +246,7 @@
 % \end{function}
 %
 %
-% \begin{function}[added = 2018-04-10]
+% \begin{function}[EXP,added = 2018-04-10]
 %   {
 %     \quark_if_recursion_tail_break:NN,
 %     \quark_if_recursion_tail_break:nN
@@ -337,7 +337,7 @@
 %   that can be jumped to using \cs{use_none_delimit_by_s_stop:w}.
 % \end{variable}
 %
-% \begin{function}[added = 2018-04-01]{\use_none_delimit_by_s_stop:w}
+% \begin{function}[EXP,added = 2018-04-01]{\use_none_delimit_by_s_stop:w}
 %   \begin{syntax}
 %     \cs{use_none_delimit_by_s_stop:w} \meta{tokens} \cs{s_stop}
 %   \end{syntax}
