--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1043,7 +1043,7 @@
 %
 % \section{Primitive conditional}
 %
-% \begin{function}{\if_dim:w}
+% \begin{function}[EXP]{\if_dim:w}
 %   \begin{syntax}
 %     \cs{if_dim:w} \meta{dimen_1} \meta{relation} \meta{dimen_2}
 %     ~~\meta{true code}
