Allow for repeated calls to load same backend (fixes #646)

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -395,7 +395,10 @@
   {
     \sys_finalise:
     \str_if_exist:NTF \c_sys_backend_str
-      { \__kernel_msg_error:nn { sys } { backend-set } }
+      {
+        \str_if_eq:VnF \c_sys_backend_str {#1}
+          { \__kernel_msg_error:nn { sys } { backend-set } }
+      }
       {
         \tl_if_blank:nF {#1}
           { \tl_set:Nn \g_@@_backend_tl {#1} }
