Allow repeated use of "undo-recent-deprecations"

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1551,7 +1551,7 @@
 % \begin{macro}{\__kernel_sys_configuration_load:n}
 %   Very basic.
 %    \begin{macrocode}
-\cs_new_protected:Npn \__kernel_sys_configuration_load:n #1
+\cs_gset_protected:Npn \__kernel_sys_configuration_load:n #1
   {
     \group_begin:
     \cs_set_protected:Npn \ProvidesExplFile
