Move l3news to l3kernel
Also make sure they all typeset:
a few fixes.

--- a/l3kernel/l3news08.tex
+++ b/l3kernel/l3news08.tex
@@ -10,7 +10,7 @@
   \RaggedRight
 }
 
-\usepackage{expl3,siunitx,catchfile,l3regex}
+\usepackage{expl3,siunitx,catchfile}
 \usepackage{hologo}
 \usepackage{verbatim}% avoid ltnews' "special" verbatim processing
 
