Minor edits in L3News 12

--- a/l3kernel/doc/l3news12.tex
+++ b/l3kernel/doc/l3news12.tex
@@ -46,7 +46,7 @@
 There has been quite a gap since the last \emph{\LaTeX3 News} (Issue~11,
 February 2018), and so there is quite a bit to cover here. Luckily, one of the
 things there \emph{is} to cover is that we are using a more formalised approach
-to logging changes, so writing up what has happened is that bit easier.
+for logging changes, so writing up what has happened is a bit easier.
 
 Work has continued apace across the \LaTeX3 codebase in the last (nearly) two
 years. A lot of this is ultimately focussed on making the core of \pkg{expl3}
@@ -63,7 +63,7 @@ During 2018, the team worked with the \TeX{} Live, \hologo{XeTeX} and
 \hologo{pdfTeX}{} v1.50 (never released), and was present in \hologo{LuaTeX}{}
 from the start of that project.
 
-Adding \cs{expanded} let us create a new argument specifier: \texttt{e}-type
+Adding \cs{expanded} lets us create a new argument specifier: \texttt{e}-type
 expansion. This is \emph{almost} the same as \texttt{x}-type, but is itself
 expandable. (It also doesn't need doubled \verb|#| tokens.) That's incredibly
 useful for creating function-like macros: you can ensure that \emph{everything}
@@ -105,7 +105,7 @@ built-in escape for \textsc{url}s and \textsc{pdf} strings.
 
 The format of messages in \pkg{expl3} was originally quite text-heavy, the idea
 being that they would stand out in the \texttt{.log} file. However, this made
-the hard to find by a regular expression search, and was very different from
+them hard to find by a regular expression search, and was very different from
 the \LaTeXe{} message approach. The formatting of \pkg{expl3} messages has been
 aligned with that from the \LaTeXe{} kernel, such that \textsc{ide} scripts and
 similar will be able to find and extract them directly.
@@ -131,8 +131,8 @@ registers, we have made some internal changes to how functions such as
 
 \subsection{More functions moved to stable}
 
-A large number of functions which were introduces as candidates have been
-evaluated and moved to stable status. The team hope to have move all functions
+A large number of functions which were introduced as candidates have been
+evaluated and moved to stable status. The team hopes to move all functions
 in \pkg{expl3} to stable status, or move them out of the core, over the coming
 months.
 
@@ -181,7 +181,7 @@ have to be updated separate from the \pkg{expl3} core. To facilitate that, we
 have split those sources into a separate bundle, which can then be updated as
 required.
 
-At the same time, the code these files contains is very low-level and is best
+At the same time, the code these files contain is very low-level and is best
 described as internal. We have re-structured how the entire set of functions
 are referred to such that they are now internal for the area they implement,
 for example image inclusion, box affine transformations, etc.
@@ -208,7 +208,7 @@ support as it is brought up to fully-workable standards.
 \section{Engine requirements}
 
 The minimum engine versions needed to use \pkg{expl3} have been
-incremented a little
+incremented a little:
 \begin{itemize}
   \item \hologo{pdfTeX} v1.40
   \item \hologo{XeTeX} v0.99992
