--- a/l3kernel/doc/l3news11.tex
+++ b/l3kernel/doc/l3news11.tex
@@ -141,7 +141,7 @@ and provide one entry at random from the data type.
 
 At the same time, we have addresses some issues with uniformity stemming from
 the random number function used by \hologo{pdfTeX}{} and inherited by other
-engines. This means that \pkg{expl3}'s \textc{fpu} will generate \emph{pseudo}-random
+engines. This means that \pkg{expl3}'s \textsc{fpu} will generate \emph{pseudo}-random
 values across the range of possible outputs.
 
 \subsection{More powerful debugging}
