--- a/l3kernel/doc/l3news12.tex
+++ b/l3kernel/doc/l3news12.tex
@@ -217,7 +217,7 @@ incremented a little:
   \item $\epsilon$-(u)p\TeX{} mid-2012
 \end{itemize}
 
-The team have also worked with the \XeTeX{} and (u)p\TeX{} developers to
+The team have also worked with the \hologo{XeTeX}} and (u)p\TeX{} developers to
 standardise the set of post-\eTeX{} utility primitives that are available: the
 so-called \enquote{\hologo{pdfTeX} utilities}. These are now available in all
 supported engine, and in time will all be \emph{required}. This primarily
