--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -723,8 +723,8 @@
 % \begin{function}[noTF, added = 2019-11-19]
 %   {\file_get_hex_dump:nN, \file_get_hex_dump:nnnN}
 %   \begin{syntax}
-%     \cs{file_get_hex_dump:n} \Arg{file name} \meta{tl var}
-%     \cs{file_get_hex_dump:nnn} \Arg{file name} \Arg{offset} \Arg{length} \meta{tl var}
+%     \cs{file_get_hex_dump:nN} \Arg{file name} \meta{tl var}
+%     \cs{file_get_hex_dump:nnnN} \Arg{file name} \Arg{offset} \Arg{length} \meta{tl var}
 %   \end{syntax}
 %   Sets the \meta{tl var} to the result of applying
 %   \cs{file_hex_dump:n}/\cs{file_hex_dump:nnn} to the \meta{file}.
@@ -2931,8 +2931,8 @@
 %   {
 %     \file_get_hex_dump:nN,
 %     \file_get_mdfive_hash:nN
-%      \file_get_size:nN,
-%      \file_get_timestamp:nN
+%     \file_get_size:nN,
+%     \file_get_timestamp:nN
 %   }
 % \begin{macro}{\@@_get_details:nnN}
 %   Non-expandable wrappers around the above in the case where appropriate
@@ -3000,7 +3000,7 @@
     \file_get_hex_dump:nnnNF {#1} {#2} {#3} #4
       { \tl_set:Nn #4 { \q_no_value } } 
   }
-\prg_new_protected_conditional:Npnn \file_get_mdfive_hash:nnnN #1#2#3#4
+\prg_new_protected_conditional:Npnn \file_get_hex_dump:nnnN #1#2#3#4
   { T , F , TF }
   {
     \tl_set:Nx #4
