Modify \file_hex_dump:nnn to use start/end index
This matches e.g. \str_range:nnn.

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -706,7 +706,7 @@
 %   {\file_hex_dump:n, \file_hex_dump:nnn}
 %   \begin{syntax}
 %     \cs{file_hex_dump:n} \Arg{file name}
-%     \cs{file_hex_dump:nnn} \Arg{file name} \Arg{offset} \Arg{length}
+%     \cs{file_hex_dump:nnn} \Arg{file name} \Arg{start index} \Arg{end index}
 %   \end{syntax}
 %   Searches for \meta{file name} using the current \TeX{} search
 %   path and the additional paths controlled by \cs{l_file_search_path_seq}.
@@ -716,15 +716,15 @@
 %   depending on the line endings used in text files. The same file will
 %   produce the same result between different engines: the algorithm used
 %   is the same in all cases. When the file is not found, the result of
-%   expansion is empty. The \meta{offset} from the start of the file
-%   and \meta{length} are given in bytes.
+%   expansion is empty. The \Arg{start index} and \Arg{end index} values
+%   work as described for \cs{str_range:nnn}.
 % \end{function}
 %
 % \begin{function}[noTF, added = 2019-11-19]
 %   {\file_get_hex_dump:nN, \file_get_hex_dump:nnnN}
 %   \begin{syntax}
 %     \cs{file_get_hex_dump:nN} \Arg{file name} \meta{tl var}
-%     \cs{file_get_hex_dump:nnnN} \Arg{file name} \Arg{offset} \Arg{length} \meta{tl var}
+%     \cs{file_get_hex_dump:nnnN} \Arg{file name} \Arg{start index} \Arg{end index} \meta{tl var}
 %   \end{syntax}
 %   Sets the \meta{tl var} to the result of applying
 %   \cs{file_hex_dump:n}/\cs{file_hex_dump:nnn} to the \meta{file}.
@@ -2887,25 +2887,75 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\file_hex_dump:nnn, \@@_hex_dump:nnn}
-% \begin{macro}{\file_hex_dump:n, \@@_hex_dump:n}
+% \begin{macro}[rEXP]{\file_hex_dump:nnn, \@@_hex_dump_auxi:nnn}
+% \begin{macro}[rEXP]{\@@_hex_dump_auxii:nnnn, \@@_hex_dump_auxiii:nnnn}
+% \begin{macro}[rEXP]{\@@_hex_dump_auxiiv:nnn}
+% \begin{macro}[rEXP]{\file_hex_dump:n, \@@_hex_dump:n}
 %   These are separate as they need multiple arguments \emph{or} the
 %   file size. For \LuaTeX{}, the emulation does not need the file
 %   size so we save a little on expansion.
 %    \begin{macrocode}
 \cs_new:Npn \file_hex_dump:nnn #1#2#3
-  { \exp_args:Ne \@@_hex_dump:nnn { \file_full_name:n {#1} } {#2} {#3} }
-\cs_new:Npn \@@_hex_dump:nnn #1#2#3
   {
-    \tl_if_blank:nF {#1}
-      { \tex_filedump:D offset ~ #2 ~ length #3 {#1} }
+    \exp_args:Neee \@@_hex_dump_auxi:nnn
+      { \file_full_name:n {#1} }
+      { \int_eval:n {#2} }
+      { \int_eval:n {#3} }
+  }
+\cs_new:Npn \@@_hex_dump_auxi:nnn #1#2#3
+  {
+    \bool_lazy_any:nF
+      {
+        { \tl_if_blank_p:n {#1} }
+        { \int_compare_p:nNn {#2} = 0 }
+        { \int_compare_p:nNn {#3} = 0 }
+      }
+      {
+        \exp_args:Ne \@@_hex_dump_auxii:nnnn
+          { \@@_details_aux:nn {#1} { size } }
+          {#1} {#2} {#3}
+      }
+  }
+\cs_new:Npn \@@_hex_dump_auxii:nnnn #1#2#3#4
+  {
+    \int_compare:nNnTF {#3} > 0
+      { \@@_hex_dump_auxiii:nnnn {#3} }
+      {
+        \exp_args:Ne \@@_hex_dump_auxiii:nnnn
+          { \int_eval:n { #1 + #3 } }
+      }
+        {#1} {#2} {#4}
+  }
+\cs_new:Npn \@@_hex_dump_auxiii:nnnn #1#2#3#4
+  {
+    \int_compare:nNnTF {#4} > 0
+      { \@@_hex_dump_auxiv:nnn {#4} }
+      {
+        \exp_args:Ne \@@_hex_dump_auxiv:nnn
+          { \int_eval:n { #2 + #4 } }
+      }
+        {#1} {#3}
+  }
+\cs_new:Npn \@@_hex_dump_auxiv:nnn #1#2#3
+  {
+    \tex_filedump:D
+      offset ~ \int_eval:n { #2 - 1 } ~
+      length ~ \int_eval:n { #1 - #2 + 1 }
+      {#3}
   }
 \sys_if_engine_luatex:T
   {
-    \cs_gset:Npn \@@_hex_dump:nnn #1#2#3
+    \cs_gset:Npn \@@_hex_dump_auxiv:nnn #1#2#3
       {
         \lua_now:e
-          { l3kernel.filedump ( " \lua_escape:e { #1 } " , #2 , #3 ) }
+          {
+            l3kernel.filedump
+              (
+                " \lua_escape:e {#3} " ,
+                \int_eval:n { #2 - 1 } ,
+                \int_eval:n { #1 - #2 + 1 }
+              )
+          }
       }
   }
 \cs_new:Npn \file_hex_dump:n #1
@@ -2924,6 +2974,8 @@
       }
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
