Remove a stray branch
This has never shown up, but it is wrong ...

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2274,7 +2274,7 @@
 \cs_new:Npn \@@_change_case_cs:N #1
   {
 %<*package>
-    \str_if_eq:nnTF {#1} { \protect } { \@@_change_case_protect:wNN }
+    \str_if_eq:nnT {#1} { \protect } { \@@_change_case_protect:wNN }
 %</package>
     \exp_after:wN \@@_change_case_cs:NN
       \exp_after:wN #1 \l_tl_case_change_exclude_tl
