--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -151,25 +151,15 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\__kernel_backend_postscript_header:n}
-%   PostScript for the header: a small saving but makes the code clearer.
-%   This is held until the start of shipout such that a document with no
-%   actual output does not write anything.
+% PostScript for the header: a small saving but makes the code clearer.
+% This is held until the start of shipout such that a document with no
+% actual output does not write anything.
 %    \begin{macrocode}
-\cs_new_protected:Npx \__kernel_backend_postscript_header:n #1
-%<*initex>
-  { \__kernel_backend_literal:n { ! #1 } }
-%</initex>
-%<*package>
-  {
-    \cs_if_exist:NTF \AtBeginDvi
-      { \exp_not:N \AtBeginDvi }
-      { \use:n }
-        { \__kernel_backend_literal:n { ! #1 } }
-  }
-%</package>
+\cs_if_exist:NTF \AtBeginDvi
+  { \exp_not:N \AtBeginDvi }
+  { \use:n }
+    { \__kernel_backend_literal:n { header = l3backend-dvips.pro } }
 %    \end{macrocode}
-% \end{macro}
 %
 % \begin{macro}
 %   {
