--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1462,9 +1462,7 @@
       \tl_put_right:Nn \l_@@_tmp_tl { \or: }
 %    \end{macrocode}
 %   For making spaces, there needs to be an |o|-type expansion of a |\use:n|
-%   (or some other tokenization) to avoid dropping the space. We also
-%   set up active tokens although they are (currently) filtered out by the
-%   interface layer (\tn{Ucharcat} cannot make active tokens).
+%   (or some other tokenization) to avoid dropping the space.
 %    \begin{macrocode}
       \char_set_catcode_space:n { 0 }
       \tl_put_right:No \l_@@_tmp_tl { \use:n { \or: } ^^@ }
