--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -864,8 +864,8 @@
 %   is carried out with no context-dependence (\emph{cf.}~\cs{tl_upper_case:n},
 %   \emph{etc.}) The \texttt{str} versions always generate \enquote{other}
 %   (category code $12$) characters, whilst the standard versions generate
-%   characters with the currently-active category code (\emph{i.e.}~as if
-%   the character had been read directly here).
+%   characters with the category code of the \meta{char} (i.e.~only
+%   the character code changes).
 % \end{function}
 %
 % \begin{function}[added = 2018-06-01, EXP]{\char_codepoint_to_bytes:n}
