--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -369,6 +369,47 @@
 %   conversely: sets it to the inverse of its current value.
 % \end{function}
 %
+% \begin{function}[added = 2019-02-10, EXP, noTF]
+%   {\bool_case_true:n, \bool_case_false:n}
+%   \begin{syntax}
+%     \cs{bool_case_true:nTF} \\
+%     ~~|{| \\
+%     ~~~~\Arg{boolexpr case_1} \Arg{code case_1} \\
+%     ~~~~\Arg{boolexpr case_2} \Arg{code case_2} \\
+%     ~~~~\ldots \\
+%     ~~~~\Arg{boolexpr case_n} \Arg{code case_n} \\
+%     ~~|}| \\
+%     ~~\Arg{true code}
+%     ~~\Arg{false code}
+%   \end{syntax}
+%   Evaluates in turn each of the \meta{boolean expression cases} until
+%   the first one that evaluates to \texttt{true} or to \texttt{false},
+%   for \cs{bool_case_true:n} and \cs{bool_case_false:n}, respectively.
+%   The \meta{code} associated to this first case is left in the input
+%   stream, followed by the \meta{true code}, and other cases are
+%   discarded.  If none of the cases match then only the \meta{false
+%   code} is inserted. The functions \cs{bool_case_true:n} and
+%   \cs{bool_case_false:n}, which do nothing if there is no match, are
+%   also available. For example
+%   \begin{verbatim}
+%     \bool_case_true:nF
+%       {
+%         { \dim_compare_p:n { \l__mypkg_wd_dim <= 10pt } }
+%             { Fits }
+%         { \int_compare_p:n { \l__mypkg_total_int >= 10 } }
+%             { Many }
+%         { \l__mypkg_special_bool }
+%             { Special }
+%       }
+%       { No idea! }
+%   \end{verbatim}
+%   leaves \enquote{\texttt{Fits}} or \enquote{\texttt{Many}} or
+%   \enquote{\texttt{Special}} or \enquote{\texttt{No idea!}} in the
+%   input stream, in a way similar to some other language's
+%   \enquote{\texttt{if} \ldots\ \texttt{elseif} \ldots\ \texttt{elseif} \ldots\
+%   \texttt{else} \ldots}.
+% \end{function}
+%
 % \section{Additions to \pkg{l3prop}}
 %
 % \begin{function}[EXP, added = 2016-12-06]
@@ -1236,6 +1277,52 @@
   { \bool_if:NTF #1 { \bool_gset_false:N } { \bool_gset_true:N } #1 }
 \cs_generate_variant:Nn \bool_gset_inverse:N { c }
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP, noTF]{\bool_case_true:n, \bool_case_false:n}
+% \begin{macro}{\@@_case:NnTF}
+% \begin{macro}{\@@_case_true:w, \@@_case_false:w, \@@_case_end:nw}
+%   For boolean cases the overall idea is the same as for
+%   \cs{tl_case:nn(TF)} as described in \pkg{l3tl}.
+%    \begin{macrocode}
+\cs_new:Npn \bool_case_true:nTF
+  { \exp:w \@@_case:NnTF \c_true_bool }
+\cs_new:Npn \bool_case_true:nT #1#2
+  { \exp:w \@@_case:NnTF \c_true_bool {#1} {#2} { } }
+\cs_new:Npn \bool_case_true:nF #1
+  { \exp:w \@@_case:NnTF \c_true_bool {#1} { } }
+\cs_new:Npn \bool_case_true:n #1
+  { \exp:w \@@_case:NnTF \c_true_bool {#1} { } { } }
+\cs_new:Npn \bool_case_false:nTF
+  { \exp:w \@@_case:NnTF \c_false_bool }
+\cs_new:Npn \bool_case_false:nT #1#2
+  { \exp:w \@@_case:NnTF \c_false_bool {#1} {#2} { } }
+\cs_new:Npn \bool_case_false:nF #1
+  { \exp:w \@@_case:NnTF \c_false_bool {#1} { } }
+\cs_new:Npn \bool_case_false:n #1
+  { \exp:w \@@_case:NnTF \c_false_bool {#1} { } { } }
+\cs_new:Npn \@@_case:NnTF #1#2#3#4
+  {
+    \bool_if:NTF #1 \@@_case_true:w \@@_case_false:w
+    #2 #1 { } \q_mark {#3} \q_mark {#4} \q_stop
+  }
+\cs_new:Npn \@@_case_true:w #1#2
+  {
+    \bool_if:nTF {#1}
+      { \@@_case_end:nw {#2} }
+      { \@@_case_true:w }
+  }
+\cs_new:Npn \@@_case_false:w #1#2
+  {
+    \bool_if:nTF {#1}
+      { \@@_case_false:w }
+      { \@@_case_end:nw {#2} }
+  }
+\cs_new:Npn \@@_case_end:nw #1#2#3 \q_mark #4#5 \q_stop
+  { \exp_end: #1 #4 }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Additions to \pkg{l3prop}}
