--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -2523,6 +2523,7 @@
           { \c_@@_code_root_tl ##1 / \l_keys_key_tl }
           {
             \tl_set:Nn \l_@@_inherit_tl {##1}
+            \cs_if_exist_use:c { \c_@@_validate_root_tl ##1 / \l_keys_key_tl }
             \cs:w \c_@@_code_root_tl ##1 / \l_keys_key_tl
               \exp_after:wN \cs_end: \exp_after:wN
               { \l_keys_value_tl }
