Document that variables should be declared before use (fixes #583)

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -365,6 +365,22 @@
 % distinguish variables from functions in the source when the |@@|
 % convention is used.
 %
+% \subsubsection{Variables: declaration}
+%
+% In well-formed \pkg{expl3} code, variables should always be declared before
+% assignment is attempted. This is true even for variable types where the
+% underlying \TeX{} implementation will allow direct assignment. This applies
+% both to setting directly (\cs{tl_set:Nn}, etc.) and to setting equal
+% (\cs{tl_set_eq:NN}, etc.).
+%
+% To help programmers to adhere to this approach, the debugging option
+% |check-declarations| may be given
+% \begin{verbatim}
+%   \debug_on:n { check-declarations }
+% \end{verbatim}
+% and will issue an error for \emph{all} assignments, at the cost of
+% performance.
+%
 % \subsubsection{Variables: scope and type}
 %
 % The \meta{scope} part of the name describes how the variable can be
