Fix two typos in doc [ci skip]

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -2240,7 +2240,7 @@
 %   that is not possible without the risk of mistakenly grabbing the
 %   entire brace group (potentially leading to a~\texttt{!~Runaway argument}
 %   error) or trying to grab a |}|$_2$, leading to a~\texttt{!~Argument
-%   of~\dots~has an extra~|}|}.
+%   of~\dots~has an extra~\}}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_allowed_token_check:N #1
   {
