--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -365,7 +365,7 @@
 %
 % \begin{function}{\EvaluateNow}
 %   \begin{syntax}
-%     \cs{EvaluteNow} \Arg{expression}
+%     \cs{EvaluateNow} \Arg{expression}
 %   \end{syntax}
 %   The standard method when creating an instance from a template is to
 %   evaluate the \meta{expression} when the instance is used. However, it may
