--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -695,14 +695,14 @@
 %   (\enquote{active}), and character code $32$ (space).
 % \end{variable}
 %
-% \begin{function}[added = 2018-06-01, EXP]{\char_codepoint_to_bytes:n}
+% \begin{function}[added = 2020-01-09, EXP]{\char_to_utfviii_bytes:n}
 %   \begin{syntax}
-%     \cs{char_codepoint_to_bytes:n} \Arg{codepoint}
+%     \cs{char_to_utfviii_bytes:n} \Arg{codepoint}
 %   \end{syntax}
 %   Converts the (Unicode) \meta{codepoint} to UTF-8 bytes. The expansion
 %   of this function comprises four brace groups, each of which will contain
 %   a hexadecimal value: the appropriate byte. As UTF-8 is a variable-length,
-%   one or more of the grouos may be empty: the bytes read in the logical order,
+%   one or more of the groups may be empty: the bytes read in the logical order,
 %   such that a two-byte codepoint will have groups |#1| and |#2| filled
 %   and |#3| and |#4| empty.
 % \end{function}
