--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -1185,7 +1185,7 @@
                   }
               }
             \use:x
-              { \@@_tmp:w \char_codepoint_to_bytes:n { "#2 } }  
+              { \@@_tmp:w \char_to_utfviii_bytes:n { "#2 } }  
           \group_end:
         }
       \@@_tmp:w \c_@@_dotless_i_tl { 0131 }
@@ -1214,8 +1214,8 @@
           \use:x
             {
               \@@_tmp:w
-                \char_codepoint_to_bytes:n { "#1 }
-                \char_codepoint_to_bytes:n { "#2 }
+                \char_to_utfviii_bytes:n { "#1 }
+                \char_to_utfviii_bytes:n { "#2 }
             }
           \@@_loop:nn
         }
@@ -1371,7 +1371,7 @@
                     {#2}
               }
             \use:x
-              { \@@_tmp:w \char_codepoint_to_bytes:n { "#1 } }
+              { \@@_tmp:w \char_to_utfviii_bytes:n { "#1 } }
           \group_end:
         }
       \@@_tmp:w { 00DF } { SS } { upper }
