--- a/l3kernel/doc/l3news12.tex
+++ b/l3kernel/doc/l3news12.tex
@@ -47,7 +47,7 @@ There has been quite a gap since the last \emph{\LaTeX3 News} (Issue~11,
 February 2018), and so there is quite a bit to cover here. Luckily, one of the
 things there \emph{is} to cover is that we are using a more formalised approach
 for logging changes, so writing up what has happened is a bit easier.
-(\LaTeX3 Nws~11 itself did not get \emph{published} when written, but is
+(By mistake \LaTeX3 News~11 itself did not get \emph{published} when written, but is
 now available: we have kept the information it contains separate as it
 is a good summary of the work that had happened in 2017.)
 
@@ -55,6 +55,11 @@ Work has continued apace across the \LaTeX3 codebase in the last (nearly) two
 years. A lot of this is ultimately focussed on making the core of \pkg{expl3}
 even more stable: \emph{squeezing} out more experimental ideas, refining
 ones we have and making it a serious option for core \LaTeX{} programming.
+
+As a result of these activities, the \LaTeX3 programming layer will be
+available as part of the kernel of \LaTeXe{} from 2020-02-02 onwards, i.e., can
+be used without explicitly loading \pkg{expl3}. See \emph{\LaTeX{}
+  News~31}~\cite{12:site-news} for more details on this.
 
 \section{New features in \pkg{expl3}}
 
@@ -101,6 +106,8 @@ In addition to entirely new functions, the team have moved the
 built-in escape for \textsc{url}s and \textsc{pdf} strings.
 
 \section{Notable fixes and changes}
+
+\emph{write}
 
 \subsection{Message formatting}
 
@@ -223,16 +230,17 @@ so-called \enquote{\hologo{pdfTeX} utilities}. These are now available in all
 supported engine, and in time will all be \emph{required}. This primarily
 impacts \hologo{XeTeX}, which gained most of these primitives in the 2019
 \TeX{} Live cycle. (Examples are the random number primitives and expandable
-file data provision.) See \emph{\LaTeX{} News~31} for more on this.
+file data provision.) See \emph{\LaTeX{} News~31}~\cite{12:site-news} for more on this.
 
 \section{Documentation}
 
 \subsection{News}
 
 The \emph{\LaTeX3 News} files were until recently only used to create
-\textsc{pdf} files on the team website. We have now integrated those into the
-\pkg{l3kernel} (\pkg{expl3} core) bundle. The news files cover all of \LaTeX3
-files, as the core files are always available.
+\textsc{pdf} files on the team website~\cite{12:site}. We have now
+integrated those into the \pkg{l3kernel} (\pkg{expl3} core)
+bundle. The news files cover all of \LaTeX3 files, as the core files
+are always available.
 
 \subsection{ChangeLog}
 
@@ -267,7 +275,7 @@ default for another optional one, for example
 A number of new experimental modules have been added within the
 \pkg{l3experimental} bundle
 \begin{itemize}
-  \item \pkg{l3bechmark} Performance-testing system using the timing
+  \item \pkg{l3benchmark} Performance-testing system using the timing
     function in modern \TeX{} engines
   \item \pkg{l3cctab} Category code tables for all engines, not
     just \hologo{LuaTeX}
@@ -302,5 +310,22 @@ There is also better support for complex directory structures, including the
 ability to manually specify \textsc{tds} location for all installed files. This
 is particularly targeted at package with both generic and format-specific file
 to install.
+
+
+\begin{thebibliography}{9}
+
+\fontsize{9.3}{11.3}\selectfont
+
+
+\bibitem{12:site}
+  \emph{\LaTeX{} Project Website}.
+  \url{https://latex-project.org/}
+
+\bibitem{12:site-news}
+  \emph{\LaTeXe{} release news letters on the \LaTeX{} Project Website}.
+  \url{https://latex-project.org/news/latex2e-news/}
+
+  
+\end{thebibliography}
 
 \end{document}
