Document case-change functions in news

--- a/l3kernel/doc/l3news12.tex
+++ b/l3kernel/doc/l3news12.tex
@@ -105,6 +105,19 @@ In addition to entirely new functions, the team have moved the
 \textsc{utf}-16 and \textsc{utf}-32 strings in some contexts, and also offers
 built-in escape for \textsc{url}s and \textsc{pdf} strings.
 
+\subsection{Case changing of text}
+
+Within \pkg{expl3}, the team have re-named and reworked the ideas from
+\cs{tl_upper_case:n} and so on, creating a new module \pkg{l3text}. This is a
+\enquote{final} home for functions to manipulate \emph{text}; token lists that
+can reasonably expected to expand to plain text plus limited mark-up, for
+example emphasis and labels/references. Moving these functions, we have also
+made a small number of changes in other modules to give consistent names to
+functions: see the change log for full details.
+
+Over time, we anticipate that functions for other textual manipulation will be
+added to this module.
+
 \section{Notable fixes and changes}
 
 \emph{write}
