--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -887,7 +887,7 @@
 %   \mathtt{1/2pi(pi+pi)} & = (2\pi)^{-1}(\pi+\pi) \simeq 1, \\
 %   \mathtt{sin 2pi} & = \sin(2)\pi \neq 0, \\
 %   \mathtt{2\char`\^2max(3,5)} & = 2^2 \max(3,5) = 20, \\
-%   \mathtt{1in/1cm} & = (1in)/(1cm) = 2.54 .
+%   \mathtt{1in/1cm} & = (1\mathrm{in})/(1\mathrm{cm}) = 2.54 .
 % \end{align*}
 % Functions are called on the value of their argument, contrarily to
 % \TeX{} macros.
