More on juxtaposition

--- a/l3kernel/doc/l3news12.tex
+++ b/l3kernel/doc/l3news12.tex
@@ -146,7 +146,8 @@ cases.
 
 Implicit multiplication by juxtaposition, such as |2pi|, is now handled
 separately from parenthetic values. Thus for example |1in/1cm| is treated
-as equal to |(1in)/(1cm)| and thus yields |2.54|.
+as equal to |(1in)/(1cm)| and thus yields |2.54|, and | 1/2(pi+pi)| is
+equal to |pi|.
 
 \subsection{Changing box dimensions}
 
