Exclude arg. of \begin and \end from case changing

--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -426,7 +426,7 @@
 %   Non-text arguments.
 %    \begin{macrocode}
 \tl_new:N \l_text_case_exclude_arg_tl
-\tl_set:Nn \l_text_case_exclude_arg_tl { \cite \label \ref }
+\tl_set:Nn \l_text_case_exclude_arg_tl { \begin \cite \end \label \ref }
 %    \end{macrocode}
 % \end{variable}
 %
